--- a/RedisDemo/appsettings.json
+++ b/RedisDemo/appsettings.json
@@ -9,5 +9,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Redis": "localhost:5002"
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Blasor Demo",
+        "Uri": "https://localhost:44331/health"
+      }
+    ],
+    "EvalutionTimeOnSeconds": 5,
+    "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
